--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rectificaciones Balcázar</title>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <header>
+    <header><!--Header-->
         <div class="logo">
-            <a href="#">
+            <a href="index.html">
                 <img src="./assets/img/balcazar.png" alt="Rectificaciones_Balcazar">
             </a>
         </div>   
         <nav>
             <ul class="nav menu roboto">
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#">REFACCIONES</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="pages/refacciones.html">REFACCIONES</a></li>
                 <li><a href="#">RECTIFICACIONES</a></li>
-                <li><a href="#">CONTACTO</a></li>
+                <li><a href="pages/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
     <div class="espacio"></div>
-    <main>
+    <main> <!-- Main -->
         <img src="./assets/img/foto-index2.jpg">
         <h1>Somos los expertos en la rectificación de motores</h1>
         <p class="texto-principal">En Rectificaciones Balcázar somos una empresa dedicada a la venta de refacciones 
@@ -33,8 +34,8 @@
         en Coatzacoalcos, Veracruz.</p>
         <div class="espacio"></div>
         <section class="contenedor">
-                <img class="foto" src="./assets/img/prueba2.jpg" alt="Rectificaciones_Balcazar">
-                <p class="texto">Contamos con un amplio inventario de refacciones de marcas de prestigio. Tenemos 
+                <img class="foto" src="./assets/img/fachada.jpg" alt="Rectificaciones_Balcazar">
+                <p class="texto"><b>Ven a Rectificaciones Balcázar</b><br><br>Contamos con un amplio inventario de refacciones de marcas de prestigio. Tenemos 
                 los mejores precios de la región, equipo y maquinaria especializada para la rectificación de motores 
                 de todas las marcas.<br><br>
                 Damos garantía en nuestros servicios, gracias a los productos, equipo y personal capacitado con el 
@@ -47,28 +48,32 @@
             <i class="fa-solid fa-screwdriver fa-2x iModificado"></i>
         </section>
     </main>
-    <footer>
+    <footer> <!-- Footer -->
         <section class="footer1">
             <div class="info">
                 <p><b>Contacto</b></p>
-                <p><i class="fa-solid fa-phone-volume"></i>  921-214-5415</p>
-                <p><i class="fa-solid fa-phone-volume"></i>  921-215-1361</p>
-                <p><i class="fa-brands fa-square-whatsapp"></i>  +52 921 197 1317</p>  
+                
+                    <p><i class="fa-solid fa-phone-volume"></i>  921-214-5415</p>
+                    <p><i class="fa-solid fa-phone-volume"></i>  921-215-1361</p>
+                    <p><i class="fa-brands fa-whatsapp"></i>  +52 921 197 1317</p> 
+                   
             </div>
             <div class="info">
                 <p><b>Mapa de Sitio</b></p>
                     <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Refacciones</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="pages/refacciones.html">Refacciones</a></li>
                         <li><a href="#">Rectificaciones</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="pages/contacto.html">Contacto</a></li>
                     </ul>
             </div>
             <div class="info">
                 <p><b>Enlaces de interés</b></p>
-                <p><i class="fab fa-facebook-f"></i> Facebook</p>
-                <p><i class="fab fa-twitter"></i> Twitter</p>
-                <p><i class="fa-brands fa-square-instagram"></i> Instagram</p>
+                <ul>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                </ul>
             </div>
         </section>
         <section class="footer2">
