--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="../css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="../js/app.js"></script>
 </head>
 <body>
     <header><!--Header-->
@@ -15,15 +16,24 @@
             <a href="../index.html">
                 <img src="../assets/img/balcazar.png" alt="Rectificaciones_Balcazar">
             </a>
-        </div>   
-        <nav>
-            <ul class="nav menu roboto">
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="refacciones.html">REFACCIONES</a></li>
-                <li><a href="#">RECTIFICACIONES</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+        </div> 
+        <div class="hamburguesa" id="hamburguesa">&#9776;</div> <!-- Menú Hamburguesa -->
+        <nav aria-label="Menu principal">
+            <ul class="nav menu roboto"><!-- Menú principal -->
+            <li><a href="../index.html">INICIO</a></li>
+            <li><a href="refacciones.html">REFACCIONES</a></li>
+            <li><a href="rectificaciones.html">RECTIFICACIONES</a></li>
+            <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
+        <nav id="menu" aria-label="Menu movil"><!-- Menú móvil -->
+            <a href="../index.html">Inicio</a>
+            <a href="refacciones.html">Refacciones</a>
+            <a href="rectificaciones.html">Rectificaciones</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+
+        <div id="overlay"></div>
     </header>
     <div class="espacio"></div>
     <main><!--Main-->
@@ -57,19 +67,39 @@
             
             
         </div>
-        <div class="iframe">
+        <div class="mapa">
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3791.574575719727!2d-94.43789017780155!3d18.
-                13742680000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85e98255c7aa7aa9%3A0x2e9e654f4dee6934!
-                2sC.%20Aquiles%20Serd%C3%A1n%20%26%20Av.%20Ignacio%20Zaragoza%2C%20Palma%20Sola%2C%2096576%20Coatzacoalco
-                s%2C%20Ver.%2C%20Mexico!5e0!3m2!1sen!2ses!4v1750244363723!5m2!1sen!2ses" 
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade"></src=>
+                13742680000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85e98255c7aa7aa9%3A0x2e9e654f4dee693
+                4!2sC.%20Aquiles%20Serd%C3%A1n%20%26%20Av.%20Ignacio%20Zaragoza%2C%20Palma%20Sola%2C%2096576%20
+                Coatzacoalcos%2C%20Ver.%2C%20Mexico!5e0!3m2!1sen!2ses!4v1750244363723!5m2!1sen!2ses" 
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
+        <!--<section class="contenedor2">
+            <i class="fa-solid fa-wrench fa-2x iModificado"></i>
+            <i class="fa-solid fa-gear fa-2x iModificado"></i>
+            <i class="fa-solid fa-screwdriver fa-2x iModificado"></i>
+        </section>-->
 
+        <h1 class="espacioHeader2">Formulario de Contacto</h1>
+        <form><!--Formulario-->
+            <!--<label for="nombre">Nombre: </label>-->
+            <input type="text" id="nombre" required placeholder="Nombre:"
+            title="nombre:" pattern="[a-zA-ZÁÉÍÓÚáéíóúÑñ ]{3,20}">
 
+            <!--<label for="email">Email: </label>-->
+            <input type="email" id="email" required placeholder="Correo:"
+            title="email:">
 
+            <!--<label for="texto">Mensaje:</label>-->
+            <textarea name="texto" id="texto" maxlength="500" required 
+            placeholder=Mensaje:></textarea>
+
+            <div class="boton">
+                <input type="submit" value="Enviar">
+            </div>
+        </form>
         <section class="contenedor2"> <!-- Iconos -->
             <i class="fa-solid fa-wrench fa-2x iModificado"></i>
             <i class="fa-solid fa-gear fa-2x iModificado"></i>
@@ -79,8 +109,6 @@
 
 
 
-
-  
     </main>
     <footer> <!-- Footer-->
         <section class="footer1">
@@ -97,7 +125,7 @@
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="refacciones.html">Refacciones</a></li>
-                        <li><a href="#">Rectificaciones</a></li>
+                        <li><a href="rectificaciones.html">Rectificaciones</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
             </div>
@@ -111,7 +139,7 @@
             </div>
         </section>
         <section class="footer2">
-            <p>&copy; Todos los derechos reservados. Rectificaciones Balcázar</p>
+            <p>&copy; 2025 Rectificaciones Balcázar. Todos los derechos reservados.</p>
         </section>
     </footer>
 </body>
