--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </header>
     <div class="espacio"></div>
     <main> <!-- Main -->
-        <img src="./assets/img/foto-index2.jpg">
+        <div class="slider">
+            <img id="slide" src="assets/img/foto1.jpg" alt="Imagen 1" class="visible">
+        </div>
         <h1>Somos los expertos en la rectificación de motores</h1>
         <p class="texto-principal">En Rectificaciones Balcázar somos una empresa dedicada a la venta de refacciones 
         y rectificación de motores de todas las marcas. Con más de 50 años de experiencia, Rectificaciones Balcázar 
@@ -64,9 +66,9 @@
             <div class="info">
                 <p><b>Contacto</b></p>
                 
-                    <p><i class="fa-solid fa-phone-volume"></i>  921-214-5415</p>
-                    <p><i class="fa-solid fa-phone-volume"></i>  921-215-1361</p>
-                    <p><i class="fa-brands fa-whatsapp"></i>  +52 921 197 1317</p> 
+                    <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</p>
+                    <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-215-1361</p>
+                    <p class="estiloT"><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p> 
                    
             </div>
             <div class="info">
@@ -81,14 +83,14 @@
             <div class="info">
                 <p class="bold">Enlaces de interés</p>
                 <ul>
-                    <li><a href="#"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a></li>
+                    <li><a href="#"><i class="fab fa-facebook-f"></i>&nbsp;&nbsp;&nbsp;Facebook</a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter</a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i>&nbsp;&nbsp;&nbsp;Instagram</a></li>
                 </ul>
             </div>
         </section>
         <section class="footer2">
-            <p>&copy; 2025 Rectificaciones Balcázar. Todos los derechos reservados.</p>
+            <p>&copy;2025 Rectificaciones Balcázar. Todos los derechos reservados.</p>
         </section>
     </footer>
 </body>
