--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -37,14 +37,13 @@
     <div class="espacio"></div>
     <main><!--Main-->
         <h1 class="espacioHeader">Información de Contacto</h1>
-        
         <div class="contenedorRef">
             <section class="listaCont">
                 <p class="margenAbajo"><b>Teléfonos</b></p>
                         <ul>
-                            <li class=".estiloTel"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
-                            <li class=".estiloTel"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
-                            <li class=".estiloTel"><i class="fa-solid fa-phone-volume"></i></i>&nbsp;&nbsp;921-214-5415</li>
+                            <li><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
+                            <li><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
+                            <li><i class="fa-solid fa-phone-volume"></i></i>&nbsp;&nbsp;921-214-5415</li>
                         </ul><br>
                 <p class="margenAbajo"><b>whatsapp</b></p>
                         <ul>
@@ -60,9 +59,9 @@
                         </ul><br>
                 <p class="margenAbajo"><b>Email</b></p>
                         <ul>
-                            <li class="especial"><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;rectificaciones.balcazar@gmail.com</li>
+                            <li><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;rectificaciones.balcazar@gmail.com</li>
                         </ul>
-            </section>   
+            </section>
         </div>
         <div class="mapa">
             <iframe 
@@ -73,7 +72,6 @@
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
-
         <h1 class="espacioHeader2">Formulario de Contacto</h1>
         <form action="https://formsubmit.co/aimeemarquina@gmail.com" method="POST"><!--Formulario-->
             <label for="nombre">Nombre: </label>
@@ -89,7 +87,8 @@
             <div class="boton">
                 <button type="submit">Enviar</button>
             </div>
-            <input type="hidden" name="_next" value="aimeebm.github.io/proyecto/gracias.html">
+            <p class="mensaje">Gracias por tu Mensaje</p>
+            <input type="hidden" name="_next" value="aimeebm.github.io/proyecto">
             <input type="hidden" name="_captcha" value="false">
         </form>
         <section class="contenedor2"> <!-- Iconos -->
@@ -104,7 +103,7 @@
                 <p><b>Contacto</b></p>
                     <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</p>
                     <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-215-1361</p>
-                    <p class="estiloT"><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p>    
+                    <p class="estiloT"><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p>   
             </div>
             <div class="info">
                 <p><b>Mapa de Sitio</b></p>
