--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,7 +90,7 @@
             <div class="boton">
                 <button type="submit">Enviar</button>
             </div>
-            <input type="hidden" name="_next" value="aimeebm.github.io/proyecto/gracias.html">
+            <input type="hidden" name="_next" value="https://aimeebm.github.io/proyecto/gracias.html">
             <input type="hidden" name="_captcha" value="false">
         </form>
         <section class="contenedor2"> <!-- Iconos -->
