--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div class="info">
                 <p><b>Contacto</b></p>
                 
-                    <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</p>
-                    <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-215-1361</p>
-                    <p class="estiloT"><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p> 
+                    <p><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</p>
+                    <p><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-215-1361</p>
+                    <p><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p> 
                    
             </div>
             <div class="info">
