--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,9 +43,9 @@
             <section class="listaCont">
                 <p class="margenAbajo"><b>Teléfonos</b></p>
                         <ul>
-                            <li class=".estiloTel"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
-                            <li class=".estiloTel"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
-                            <li class=".estiloTel"><i class="fa-solid fa-phone-volume"></i></i>&nbsp;&nbsp;921-214-5415</li>
+                            <li><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
+                            <li><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</li>
+                            <li><i class="fa-solid fa-phone-volume"></i></i>&nbsp;&nbsp;921-214-5415</li>
                         </ul><br>
                 <p class="margenAbajo"><b>whatsapp</b></p>
                         <ul>
@@ -80,17 +80,17 @@
             <label for="nombre">Nombre: </label>
             <input type="text" id="nombre" name="nombre" required 
             pattern="[a-zA-ZÁÉÍÓÚáéíóúÑñ ]{3,20}"
-            title="Ingresa entre 3 y 20 letras" placeholder="Nombre:">
+            title="Ingresa entre 3 y 20 letras" placeholder="Nombre">
             <label for="email">Email: </label>
             <input type="email" id="email" name="email" required
-            placeholder="Correo:">
-            <label for="texto">Mensaje:</label>
+            placeholder="Correo">
+            <label for="mensaje">Mensaje:</label>
             <textarea name="mensaje" id="mensaje" rows="5" required 
-            placeholder="Mensaje:"></textarea>
+            placeholder="Escribe tu mensaje"></textarea>
             <div class="boton">
                 <button type="submit">Enviar</button>
             </div>
-            <input type="hidden" name="_next" value="https://aimeebm.github.io/proyecto/gracias.html">
+            <input type="hidden" name="_next" value="https://aimeebm.github.io/proyecto/pages/gracias.html">
             <input type="hidden" name="_captcha" value="false">
         </form>
         <section class="contenedor2"> <!-- Iconos -->
@@ -103,9 +103,9 @@
         <section class="footer1">
             <div class="info">
                 <p><b>Contacto</b></p>
-                    <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</p>
-                    <p class="estiloT"><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-215-1361</p>
-                    <p class="estiloT"><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p>    
+                    <p><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-214-5415</p>
+                    <p><i class="fa-solid fa-phone-volume"></i>&nbsp;&nbsp;921-215-1361</p>
+                    <p><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p>    
             </div>
             <div class="info">
                 <p><b>Mapa de Sitio</b></p>
