--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -89,7 +89,7 @@
                 <button type="submit">Enviar</button>
             </div>
             <p class="mensaje">Gracias por tu Mensaje</p>
-            <input type="hidden" name="_next" value="aimeebm.github.io/proyecto">
+            <input type="hidden" name="_next" value="https://aimeebm.github.io/proyecto/pages/gracias.html">
             <input type="hidden" name="_captcha" value="false">
         </form>
         <section class="contenedor2"> <!-- Iconos -->
