--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -76,7 +76,7 @@
         </div>
 
         <h1 class="espacioHeader2">Formulario de Contacto</h1>
-        <form action="https://formsubmit.co/aimeemarquina@gmail.com" method="POST"><!--Formulario-->
+        <form action="https://formsubmit.co/baf00ad3304f44a36e72b081fb35945b" method="POST"><!--Formulario-->
             <label for="nombre">Nombre: </label>
             <input type="text" id="nombre" name="nombre" required 
             pattern="[a-zA-ZÁÉÍÓÚáéíóúÑñ ]{3,20}"
