--- a/pages/rectificaciones.html
+++ b/pages/rectificaciones.html
@@ -50,7 +50,7 @@
         <h1 class="espacioHeader">Servicios de rectificación de motores</h1>
 
             <div class="contenedorRef">
-                <section class="listaRef listaRef2">
+                <section class="listaRef2">
                     <p class="margenAbajo"><b>Cabeza</b></p>
                             <ul>
                                 <li>Rectificación de cabeza.</li>
@@ -74,7 +74,7 @@
                                 <li>Rectificación de cigüeñal bancada y bielas.</li>
                             </ul>
                 </section>
-                <section class="listaRef listaRef2">
+                <section class="listaRef2">
                     <p class="margenAbajo"><b>Servicios adicionales</b></p>
                             <ul>
                                 <li>Rectificación cilindros de block.</li>
