--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>Rectificaciones Balcázar</title>
+    <meta name="description" content="Reparacion de motores y venta de refacciones en Coatzacoalcos, Veracruz.">
+    <title>Reparación de motores y venta de refacciones - Rectificaciones Balcázar</title>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" defer></script>
 </head>
 <body>
     <header>
@@ -38,7 +39,7 @@
     <div class="espacio"></div>
     <main> <!-- Main -->
         <div class="slider">
-            <img id="slide" src="assets/img/foto1.jpg" alt="Imagen 1" class="visible">
+            <img id="slide" src="assets/img/foto1.jpg" alt="slider" class="visible">
         </div>
         <h1>Somos los expertos en la rectificación de motores</h1>
         <p class="texto-principal">En Rectificaciones Balcázar somos una empresa dedicada a la venta de refacciones 
@@ -48,7 +49,7 @@
         cercano, basados en la confianza y la satisfacción total de nuestros clientes.</p>
         <div class="espacio"></div>
         <section class="contenedor">
-                <img class="foto" src="./assets/img/portada1.jpg" alt="Rectificaciones_Balcazar">
+                <img class="foto" src="./assets/img/portada1.jpg" alt="Refacciones de motores">
                 <p class="texto"><b>Ven a Rectificaciones Balcázar</b><br><br>Contamos con un amplio inventario de 
                 refacciones de marcas de prestigio. Tenemos los mejores precios de la región, equipo y maquinaria 
                 especializada para la rectificación de motores de todas las marcas. Damos garantía en nuestros servicios, 
