--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>Rectificaciones Balcázar</title>
+    <meta name="description" content="Datos de contacto: telefonos, direccion, email. Rectificaciones Balcazar.">
+    <title>Formulario de contacto - Rectificaciones Balcázar</title>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="../css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="../js/app.js"></script>
+    <script src="../js/app.js" defer></script>
 </head>
 <body>
     <header><!--Header-->
@@ -64,7 +65,7 @@
                         </ul>
             </section>
         </div>
-        <div class="mapa">
+        <div class="mapa"> <!--iFrame-->
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3791.574575719727!2d-94.43789017780155!3d18.
                 13742680000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85e98255c7aa7aa9%3A0x2e9e654f4dee693
