--- a/pages/rectificaciones.html
+++ b/pages/rectificaciones.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>Rectificaciones Balcázar</title>
+    <meta name="description" content="Reparacion de partes de motores: cabeza, block, bancada, etc.">
+    <title>Reparación de motores - Rectificaciones Balcázar</title>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="../css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="../js/app.js"></script>
+    <script src="../js/app.js" defer></script>
 </head>
 <body>
     <header>
@@ -39,7 +40,7 @@
     <main> <!-- Main -->
         <h1 class="espacioHeader">Rectificación de Motores</h1>
         <section class="contenedor">
-                <img class="foto" src="../assets/img/prueba2.jpg" alt="Rectificaciones_Balcazar">
+                <img class="foto" src="../assets/img/prueba2.jpg" alt="Rectificación de motores">
                 <p class="texto"><b>Reparación técnica</b><br><br>Reparación y rectificación de camisas, culatas, 
                 cigüeñales y todo tipo de componentes internos. Rectificado de cigüeñales hasta tolerancias 
                 micrométricas. Además ofrecemos reacondicionamiento de bancos de motor completo, utilizando 
