--- a/pages/refacciones.html
+++ b/pages/refacciones.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>Rectificaciones Balcázar</title>
+    <meta name="description" content="Venta de componentes para tu motor: cabeza, block, bancada y carter.">
+    <title>Venta de refacciones para motores- Rectificaciones Balcázar</title>
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="../css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="../js/app.js"></script>
+    <script src="../js/app.js" defer></script>
 </head>
 <body>
     <header>
@@ -44,7 +45,7 @@
                 exacta que tu motor necesita. Además tenemos repuestos a medida: talles, rodamientos y sellos de distintas 
                 marcas reconocidas. Envíos locales e internacionales, con opciones urgentes para mantener tu operación en 
                 marcha.</p>
-                <img class="foto" src="../assets/img/refaccionaria.jpg" alt="Rectificaciones_Balcazar">        
+                <img class="foto" src="../assets/img/refaccionaria.jpg" alt="Refacciones para motores">        
         </section>
         <div class="espacio"></div> 
         <h1 class="espacioHeader">Componentes de motores de combustión interna</h1>
