--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                    
             </div>
             <div class="info">
-                <p class="bold">Mapa de Sitio</b>
+                <p class="bold">Mapa de sitio</b>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="pages/refacciones.html">Refacciones</a></li>
