--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -109,7 +109,7 @@
                     <p><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p>    
             </div>
             <div class="info">
-                <p><b>Mapa de Sitio</b></p>
+                <p><b>Mapa de sitio</b></p>
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="refacciones.html">Refacciones</a></li>
