--- a/pages/rectificaciones.html
+++ b/pages/rectificaciones.html
@@ -48,7 +48,7 @@
                 vibraciones y verificación de holguras para garantizar un rendimiento óptimo.</p>     
         </section>
         <div class="espacio"></div> 
-        <h1 class="espacioHeader">Servicios de rectificación de motores</h1>
+        <h1 class="espacioHeader">Servicios de Rectificación de Motores</h1>
 
             <div class="contenedorRef">
                 <section class="listaRef2">
@@ -122,7 +122,7 @@
                     
             </div>
             <div class="info">
-                <p><b>Mapa de Sitio</b></p>
+                <p><b>Mapa de sitio</b></p>
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="refacciones.html">Refacciones</a></li>
