--- a/pages/refacciones.html
+++ b/pages/refacciones.html
@@ -48,7 +48,7 @@
                 <img class="foto" src="../assets/img/refaccionaria.jpg" alt="Refacciones para motores">        
         </section>
         <div class="espacio"></div> 
-        <h1 class="espacioHeader">Componentes de motores de combustión interna</h1>
+        <h1 class="espacioHeader">Componentes de Motores de Combustión Interna</h1>
         <div class="contenedorRef">
             <section class="listaRef">
                 <p class="margenAbajo"><b>Cabeza</b></p>
@@ -113,7 +113,7 @@
                     <p><i class="fa-brands fa-whatsapp"></i>&nbsp;+52 921 197 1317</p>     
             </div>
             <div class="info">
-                <p><b>Mapa de Sitio</b></p>
+                <p><b>Mapa de sitio</b></p>
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="refacciones.html">Refacciones</a></li>
