--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="./js/app.js" defer></script>
+    <!--<script src="./js/app.js" defer></script>-->
+    <script src="./js/app.js"></script>
 </head>
 <body>
     <header>
@@ -95,5 +96,25 @@
             <p>&copy;2025 Rectificaciones Balcázar. Todos los derechos reservados.</p>
         </section>
     </footer>
+        <script>
+            const imagenes = ["assets/img/foto1.jpg", "assets/img/foto2.jpg",];
+            let indice = 0;
+            const img = document.getElementById("slide");
+            if (!img) {
+                console.error("No se encontró la imagen con id='slide'");
+            } else {
+                function cambiarImagen() {
+                img.style.opacity = 0;
+                setTimeout(() => {
+                    indice = (indice + 1) % imagenes.length;
+                    img.src = imagenes[indice];
+                    img.style.opacity = 1;
+                }, 1500);
+                }
+
+                setTimeout(cambiarImagen, 2000);
+                setInterval(cambiarImagen, 8000);
+            }
+        </script>
 </body>
 </html>
