--- a/pages/rectificaciones.html
+++ b/pages/rectificaciones.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="../css/styles.css" rel="stylesheet" type="text/css" />
-    <script src="../js/app.js" defer></script>
+    <script src="../js/app.js"></script>
 </head>
 <body>
     <header>
